--- a/src/styles/blocks/_layout.scss
+++ b/src/styles/blocks/_layout.scss
@@ -1,13 +1,9 @@
-@require 'fonts';
-
 .vz-layout {
   height: 100%;
   display: grid;
   grid-template-columns: 18rem 1fr;
   grid-template-rows: 64px 1fr;
-  grid-template-areas: \
-    "brand breadcrumbs" \
-    "menu content";
+  grid-template-areas: "brand breadcrumbs" "menu content";
 }
 
 .vz-layout__brand {
