--- a/src/styles/blocks/_flashes.scss
+++ b/src/styles/blocks/_flashes.scss
@@ -4,7 +4,7 @@
 }
 
 .vz-flash-container__indicator {
-  background-color rgba(black, .6);
+  background-color: rgba(black, .6);
   margin-right: 5px;
   height: 30px;
   width: 10px;
@@ -24,7 +24,7 @@
 
 .vz-flash-container__flash {
   border: 1px solid rgba(black, 0.05);
-  background-color $white;
+  background-color: $white;
   align-items: center;
   padding-left: 1rem;
   display: flex;
