--- a/src/styles/blocks/_jumbotron.scss
+++ b/src/styles/blocks/_jumbotron.scss
@@ -1,14 +1,12 @@
-@require "../lib/text.styl";
-
 .vz-jumbotron {
   border: 1px solid rgba(0, 0, 0, 0.06);
-  background-color $white;
+  background-color: $white;
   padding: 2.5rem;
   width: 100%;
 }
 
 .vz-jumbotron__title {
-  wide-text();
+  @extend .wide-text;
   margin-bottom: 3rem;
   font-style: italic;
   font-weight: 500;
