--- a/src/styles/blocks/_user.scss
+++ b/src/styles/blocks/_user.scss
@@ -1,10 +1,3 @@
-@require "lib/text";
-@require "variables";
-
-
-$user__avatar-size ?= 3rem;
-
-
 .vz-user {
   &::before {
     content: "";
@@ -26,8 +19,8 @@ $user__avatar-size ?= 3rem;
   margin-right: 1rem;
 
   img {
-    height: $user__avatar-size;
-    width: $user__avatar-size;
+    height: 3rem;
+    width: 3rem;
     border-radius: 999px;
   }
 }
@@ -44,7 +37,7 @@ $user__avatar-size ?= 3rem;
   margin-top: 2rem;
 
   a {
-    unlink();
+    @extend .unlink;
 
     display: block;
     text-align: center;
