--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -28,3 +28,25 @@ input::placeholder {
   font-size: 87.5%;
   color: $accent;
 }
+
+.vz-form-control--select {
+  background-color: $white;
+  font-size: 1rem;
+  border: none;
+  height: 44px;
+  width: 100%;
+}
+
+.vz-form-control__checker {
+  input {
+    margin: .5rem .5rem .5rem 0;
+    font-size: 100%;
+  }
+}
+
+.vz-form-control__radio {
+  input {
+    margin: .5rem .5rem .5rem 0;
+    font-size: 100%;
+  }
+}
