--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,7 @@
 @import "blocks/flashes";
 @import "blocks/form";
 @import "blocks/jumbotron";
+@import "blocks/table";
 @import "blocks/layout";
 @import "blocks/logo";
 @import "blocks/sidebar";
