Clean Webpack Plugin added to build script.

--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -1,5 +1,6 @@
 html {
   font: 16px/1.618 "Titillium Web", "sans-serif";
+  background-color: $white;
   box-sizing: border-box;
   height: 100%;
 }
