--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,7 +10,9 @@
 @import "blocks/container";
 @import "blocks/count-bubbles";
 @import "blocks/flashes";
-@import "blocks/form";
+@import "blocks/form-group";
+@import "blocks/form-check";
+@import "blocks/form-input";
 @import "blocks/jumbotron";
 @import "blocks/table";
 @import "blocks/layout";
