--- a/src/styles/blocks/_pagination.scss
+++ b/src/styles/blocks/_pagination.scss
@@ -9,8 +9,7 @@
 
 .vz-pagination__button {
   @include unlink;
-  // background-color: rgba(0, 0, 0, 0.6);
-  background-color: transparent;
+  background-color: $white;
   transition: all 0.2s ease-in-out;
   text-transform: uppercase;
   padding: .5rem 1rem;
@@ -19,18 +18,19 @@
 }
 
 .vz-pagination__button--active {
-  background-color: $primary;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .vz-pagination__button:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.06);
 }
 
 .vz-pagination__button--disabled {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.3);
+  color: $off-white;
   cursor: not-allowed;
 }
 
 .vz-pagination__button--disabled:hover {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.3);
 }
