--- a/src/styles/blocks/_layout.scss
+++ b/src/styles/blocks/_layout.scss
@@ -23,11 +23,14 @@
 }
 
 .vz-layout__content {
-  grid-area: content;
   background: whitesmoke;
+  grid-area: content;
+  color: $black;
   padding: 2rem;
 }
 
 .vz-layout__menu {
-  grid-area: menu
+  background-color: $white;
+  grid-area: menu;
+  color: $black;
 }
