loading / progress bar.

--- a/src/styles/_kitchen-sink.scss
+++ b/src/styles/_kitchen-sink.scss
@@ -2,4 +2,12 @@
   margin: 5rem 0;
 }
 
-.ks-image-container {}
+.ks-section__container {
+  display: inline-block;
+  width: fit-content;
+  overflow: hidden;
+
+  img {
+    display: block;
+  }
+}
