--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,4 +20,5 @@
 @import "blocks/sidebar";
 @import "blocks/user";
 @import "blocks/pagination";
+@import "blocks/progress-bar";
 @import "kitchen-sink";
