--- a/src/styles/blocks/_progress-bar.scss
+++ b/src/styles/blocks/_progress-bar.scss
@@ -6,7 +6,7 @@
 }
 
 .vz-progress-bar--loading {
-  animation: loading-progress-bar 2.5s infinite;
+  animation: loading-progress-bar 5s infinite;
 }
 
 @keyframes infinite-progress-bar {
@@ -25,24 +25,28 @@
 }
 
 @keyframes loading-progress-bar {
-  from {
-    -webkit-transform: translateX(-40%) scaleX(0);
-    transform: translateX(-40%) scaleX(0);
+  0%{
+    width: 10%;
   }
-  25% {
-    -webkit-transform: translateX(-60%) scaleX(0);
-    transform: translateX(-60%) scaleX(0);
+  10% {
+    width: 22%;
+  }
+  50% {
+    width: 22%;
   }
   60% {
-    -webkit-transform: none;
-    transform: none;
+    width: 50%;
   }
-  25% {
-    -webkit-transform: translateX(-50%) scaleX(0);
-    transform: translateX(-50%) scaleX(0);
+  80% {
+    width: 50%;
   }
-  to {
-    -webkit-transform: translateX(-40%) scaleX(0);
-    transform: translateX(-40%) scaleX(0);
+  90% {
+    width: 90%;
+  }
+  95% {
+    width: 90%;
+  }
+  100% {
+    width: 10%;
   }
 }
