Progress bar positioning.

--- a/src/styles/_kitchen-sink.scss
+++ b/src/styles/_kitchen-sink.scss
@@ -4,9 +4,9 @@
 
 .ks-section__container {
   display: inline-block;
+  position: relative;
   width: fit-content;
   margin-right: 2rem;
-  overflow: hidden;
 
   img {
     display: block;
