Using ionicons script.

--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -14,10 +14,10 @@ body {
 
 body::-moz-selection {
   color: $white;
-  background: $black;
+  background-color: $black;
 }
 
 ::selection {
   color: $white;
-  background: $black;
+  background-color: $black;
 }
