Basic menu style.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,4 +21,5 @@
 @import "blocks/user";
 @import "blocks/pagination";
 @import "blocks/progress-bar";
+@import "blocks/menu";
 @import "kitchen-sink";
