--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -17,3 +17,6 @@ $danger: CRIMSON;
 //
 $container-width: 75rem;
 $container-width-narrow: 30rem;
+
+//easings
+$ease: cubic-bezier(0.865, 0.140, 0.095, 0.870);
