Added cards and flexboxgrid.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,5 +21,6 @@
 @import "blocks/user";
 @import "blocks/pagination";
 @import "blocks/progress-bar";
+@import "blocks/cards";
 @import "blocks/menu";
 @import "kitchen-sink";
