--- a/src/styles/blocks/_buttons.scss
+++ b/src/styles/blocks/_buttons.scss
@@ -22,6 +22,11 @@
   padding: 0;
 }
 
+.vz-button--cards {
+  margin: 3rem 2rem 0 0;
+  padding: 0;
+}
+
 .vz-button--square {
   padding: .5rem .8rem;
 }
