--- a/src/styles/blocks/_buttons.scss
+++ b/src/styles/blocks/_buttons.scss
@@ -1,4 +1,5 @@
 .vz-button {
+  @include unlink;
   transition: all 0.2s ease-in-out;
   border: 1px solid transparent;
   color: rgba(0,0,0,0.6);
@@ -11,6 +12,8 @@
   font-weight: 400;
   font-size: 1rem;
   cursor: pointer;
+
+
 }
 
 .vz-button--small {
