Form actions container.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 @import "blocks/container";
 @import "blocks/count-bubbles";
 @import "blocks/flashes";
+@import "blocks/form";
 @import "blocks/form-group";
 @import "blocks/form-check";
 @import "blocks/form-input";
