Fixed comments transition.

--- a/src/styles/blocks/_comments.scss
+++ b/src/styles/blocks/_comments.scss
@@ -45,6 +45,7 @@
   transition: all 0.2s ease-in-out;
   position: absolute;
   font-size: 90%;
+  color: $black;
   opacity: 0;
   padding: 0;
   top: 95%;
@@ -53,6 +54,7 @@
 
 .vz-comment--is-active {
   background-color: $yes !important;
+  transition: all .25s;
   color: $white;
 }
 
