Flashes mobile version.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -26,3 +26,6 @@ $container-width-narrow: 30rem;
 
 //easings
 $ease: cubic-bezier(0.865, 0.140, 0.095, 0.870);
+
+//media queries
+$mobile: "(max-width: 1023px)";
