action card refactor

--- a/src/styles/blocks/_action-card.scss
+++ b/src/styles/blocks/_action-card.scss
@@ -16,5 +16,9 @@
 }
 
 .vz-action-card__description {
-  margin-bottom: 2.5rem;
+  @extend p;
+}
+
+.vz-action-card__buttons {
+  margin-top: 2.5rem;
 }
