--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -26,6 +26,14 @@ input, textarea, select, button {
   font: inherit;
 }
 
+h1, h2, h3, h4, h5 {
+
+}
+
+p {
+  margin: .5rem 0 1rem;
+}
+
 dl {}
 
 dt {
