--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -27,7 +27,7 @@ input, textarea, select, button {
 }
 
 h1, h2, h3, h4, h5 {
-
+  font-weight: 400;
 }
 
 p {
@@ -45,3 +45,12 @@ dd {
   color: rgba(0, 0, 0, 0.6);
   margin: 0 0 1rem .5rem;
 }
+
+i.icon {
+  width: 1.5em;
+  text-align: center;
+  display: inline-block;
+}
+
+// ajustar flow content dos cards para estabilizar altura. incluir todas as opções possíveis no kitchen sink.
+
