--- a/src/styles/blocks/_cards.scss
+++ b/src/styles/blocks/_cards.scss
@@ -1,17 +1,16 @@
 .vz-card {
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: $white;
+  flex-flow: column nowrap;
+  margin: 0 1rem;
+  display: flex;
+  width: 100%;
   color: $black;
 }
 
-// .vz-card:hover {
-//   -webkit-box-shadow: 0px 10px 0px 0px $yes;
-//   -moz-box-shadow: 0px 10px 0px 0px $yes;
-//   box-shadow: 0px 5px 0px 0px $yes;
-// }
-
 .vz-card__header {
   padding: 1rem 1rem 0 1rem;
+  flex: 0 0;
 }
 
 .vz-card__title {
@@ -34,6 +33,7 @@
 
 .vz-card__content {
   padding: 1rem;
+  flex: 1 0;
 
   dl {
     margin-top: 0;
