--- a/src/styles/blocks/_flashes.scss
+++ b/src/styles/blocks/_flashes.scss
@@ -27,6 +27,9 @@
   align-items: center;
   padding: 0 1rem;
   height: auto;
+  border-bottom: 1px solid rgba(black, .06);
+  border-left: 1px solid rgba(black, .06);
+  border-top: 1px solid rgba(black, .06);
 
   a {
     transition: color 0.25s ease-in-out;
