--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,5 +26,4 @@
 @import "blocks/cards";
 @import "blocks/menu";
 @import "kitchen-sink";
-
-@include button('mahomeno', orange);
+@import "blocks/fab";
