--- a/src/styles/blocks/_comments.scss
+++ b/src/styles/blocks/_comments.scss
@@ -96,3 +96,30 @@
   background-color: $white;
   text-align: left;
 }
+
+// Quem e quando
+.vz-comment--whowhen {
+  background: transparent;
+  color: #6e6d6d;
+  display: block;
+  width: 100%;
+
+  .vz-comment__body {
+    padding: 0;
+  }
+}
+
+.vz-comment__info {
+  font-weight: 800;
+  font-size: 87.5%;
+  color: #6e6d6d;
+}
+
+.vz-comment__info::after {
+  content: "";
+  background-color: #474747;
+  margin-top: .25rem;
+  display: block;
+  width: 100%;
+  height: 1px;
+}
